GBL-2576 / TSK-2303 -- добавлять адресатов в копию писем

--- a/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageDecision.LoadImage_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ApprovalStageDecision.LoadImage_MT.adoc
@@ -18,7 +18,7 @@ objectContext:::
 +
 Текущий контекст объектов
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `https://msdn.microsoft.com/ru-ru/library/system.drawing.image.aspx[System.Drawing.Image]`
 +
 Изображение
