--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalPathService.AddDocumentState_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalPathService.AddDocumentState_MT.adoc
@@ -28,7 +28,7 @@ state:::
 +
 Состояние документа
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalPathState_CL.adoc[ApprovalPathState]`
 +
 Добавленное состояние документа
