--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalPathService.AddRoadMap_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalPathService.AddRoadMap_MT.adoc
@@ -18,7 +18,7 @@ approvalPath:::
 +
 Маршрут согласования
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalPathRoadMap_CL.adoc[ApprovalPathRoadMap]`
 +
 Добавленный этап
