--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc
@@ -18,7 +18,7 @@ approvalStage:::
 +
 Этап маршрута согласования
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageDecision_CL.adoc[ApprovalStageDecision]`
 +
 Решение
