--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_MT.adoc
@@ -23,7 +23,7 @@ searchWord:::
 +
 Идентификатор поискового слова, по которому будут выбираться согласующие
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover]`
 +
 Согласующий этапа
