--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.CreateApprover_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.CreateApprover_MT.adoc
@@ -18,7 +18,7 @@ employee:::
 +
 Согласующий сотрудник
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover]`
 +
 Согласующий
