--- a/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILinkService.FindOppositeLink_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILinkService.FindOppositeLink_MT.adoc
@@ -13,6 +13,7 @@ LinksLinkType FindOppositeLink(LinksLinkType link)
 ----
 
 Параметры::
+link:::
 Тип: `xref:BackOffice-ObjectModel-Layouts:LinksLinkType_CL.adoc[LinksLinkType]`
 +
 Ссылка, для которой должна быть получена обратная ссылка
