--- a/modules/BackOffice-ObjectModel-Services/bo-om-services.adoc
+++ b/modules/BackOffice-ObjectModel-Services/bo-om-services.adoc
@@ -12,3 +12,9 @@
 ******* xref:IAccessCheckingService.ResetRolesCache_MT.adoc[]
 ******* xref:IAccessCheckingService.ResetRolesCache_1_MT.adoc[]
 ******* xref:IAccessCheckingService.ResetRolesCache_2_MT.adoc[]
+****** xref:TaskGroupMessagesEventHandlerService_CL.adoc[]
+******* xref:TaskGroupMessagesEventHandlerService.GetNotificationBcc_MT.adoc[]
+******* xref:TaskGroupMessagesEventHandlerService.GetNotificationCc_MT.adoc[]
+****** xref:TaskMessagesEventHandlerService_CL.adoc[]
+******* xref:TaskMessagesEventHandlerService.GetNotificationBcc_MT.adoc[]
+******* xref:TaskMessagesEventHandlerService.GetNotificationCc_MT.adoc[]
