--- a/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.CreateReconciliationCard_MT.adoc
+++ b/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.CreateReconciliationCard_MT.adoc
@@ -19,7 +19,7 @@ initialCardId:::
 Идентификатор карточки, инициирующей согласование
 
 cardCreationSetting:::
-Тип: xref:BackOffice-ObjectModel-Kinds:KindsCardCreationSetting_CL.adoc[KindsCardCreationSetting].
+Тип: `xref:BackOffice-ObjectModel-Kinds:KindsCardCreationSetting_CL.adoc[KindsCardCreationSetting]`
 +
 Настройки режима создания согласования
 
