--- a/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.FillFiles_MT.adoc
+++ b/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.FillFiles_MT.adoc
@@ -14,12 +14,12 @@ void FillFiles(Document initialDocument, BaseCard reconciliationCard)
 
 Параметры::
 initialDocument:::
-Тип: xref:BackOffice-ObjectModel-Document:Document_CL.adoc[Document]
+Тип: `xref:BackOffice-ObjectModel-Document:Document_CL.adoc[Document]`
 +
 Инициирующий документ, из которого будут скопированы файлы
 
 reconciliationCard:::
-Тип: xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]
+Тип: `xref:BackOffice-ObjectModel-BaseCard:BaseCard_CL.adoc[BaseCard]`
 +
 Карточка согласования
 
