--- a/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.HandleDocumentAfterReconcileCreated_MT.adoc
+++ b/modules/DocumentsManagement/pages/ObjectModel/IReconcileService.HandleDocumentAfterReconcileCreated_MT.adoc
@@ -14,12 +14,12 @@ void HandleDocumentAfterReconcileCreated(Document document, CardData reconciliat
 
 Параметры::
 document:::
-Тип: xref:BackOffice-ObjectModel-Document:Document_CL.adoc[Document]
+Тип: `xref:BackOffice-ObjectModel-Document:Document_CL.adoc[Document]`
 +
 Инициирующий документ
 
 reconciliationCardData:::
-Тип: xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]
+Тип: `xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]`
 +
 Данный карточки согласования
 
