--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedView.Import_MT.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedView.Import_MT.adoc
@@ -13,6 +13,7 @@ public abstract void Import(View view)
 ----
 
 Параметры::
+view:::
 Тип: `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]`
 +
 Описание представления
