--- a/modules/ROOT/pages/whats-new.adoc
+++ b/modules/ROOT/pages/whats-new.adoc
@@ -4,6 +4,19 @@
 
 == Изменения в API
 
+Уведомления о заданиях::
+Класс xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService_CL.adoc[TaskMessagesEventHandlerService] расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
++
+--
+* xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationCc_MT.adoc[] -- позволяет вычислить адресатов в BCC.
+* xref:BackOffice-ObjectModel-Services:TaskMessagesEventHandlerService.GetNotificationBcc_MT.adoc[] -- позволяет вычислить адресатов в CC.
+--
++
+Класс xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService_CL.adoc[TaskGroupMessagesEventHandlerService] также расширен методами, позволяющими определить собственную логику по рассылке писем с CC и BCC:
++
+* xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationBcc_MT.adoc[] -- позволяет вычислить адресатов в BCC.
+* xref:BackOffice-ObjectModel-Services:TaskGroupMessagesEventHandlerService.GetNotificationCc_MT.adoc[] -- позволяет вычислить адресатов в CC.
+
 Цитаты из файла::
 * Пространство имён `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]` дополнено классами и методами для работы с цитатами файлов:
 +
