--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_3_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_3_MT.adoc
@@ -23,7 +23,7 @@ role:::
 +
 Роль согласующих
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover]`
 +
 Согласующий этапа
