--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_4_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddSelectedApprover_4_MT.adoc
@@ -23,7 +23,7 @@ unit:::
 +
 Подразделение согласующих
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover]`
 +
 Согласующий этапа
