--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddState_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.AddState_MT.adoc
@@ -18,7 +18,7 @@ approvalStage:::
 +
 Этап согласования
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageState_CL.adoc[ApprovalStageState]`
 +
 Состояние этапа согласования
