--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.CopyApproversFromDocument_MT.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/IApprovalStageService.CopyApproversFromDocument_MT.adoc
@@ -23,7 +23,7 @@ document:::
 +
 Документ
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `xref:ObjectModel/ApprovalStageApprover_CL.adoc[ApprovalStageApprover]`
 +
 Добавленные согласующие
