--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CanCancelLockAnyMainFile_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CanCancelLockAnyMainFile_MT.adoc
@@ -18,7 +18,7 @@ document:::
 +
 Документ
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
 `true` -- если есть основные файлы, с которых можно снять блокировку, иначе -- `false`
