--- a/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILinkService.DeleteLink_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ILinkService/pages/ILinkService.DeleteLink_MT.adoc
@@ -13,6 +13,7 @@ void DeleteLink(LinksLinkType link)
 ----
 
 Параметры::
+link:::
 Тип: `xref:BackOffice-ObjectModel-Layouts:LinksLinkType_CL.adoc[LinksLinkType]`
 +
 Удаляемый тип ссылки
