--- a/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.CheckFileChanged_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService.CheckFileChanged_MT.adoc
@@ -18,7 +18,7 @@ versionedFileCard:::
 +
 Версионный файл
 
-Возвращаемое значение:::
+Возвращаемое значение::
 Тип: `http://msdn.microsoft.com/ru-ru/library/system.boolean.aspx[System.Boolean]`
 +
 `true` -- файл был изменен, иначе -- `false`
