--- a/modules/samples/pages/object-model/staff-sync-ad.adoc
+++ b/modules/samples/pages/object-model/staff-sync-ad.adoc
@@ -67,4 +67,4 @@ class LongProcessManager : ILongProcessManager
 }
 ----
 
-Чтобы синхронизация могла быть выполнена необходимо связать элемент _Справочника сотрудников_ и объект Active Directory. Подробнее об этом читайте в разделе xref:baseobjects:desdirs:staff/active-directory-sychronization.adoc[по ссылке].
+Чтобы синхронизация могла быть выполнена необходимо связать элемент _Справочника сотрудников_ и объект Active Directory. Подробнее об этом читайте в разделе xref:backofficedesdirs:staff/active-directory-sychronization.adoc[по ссылке].
