--- a/modules/scripts/pages/develop-scripts.adoc
+++ b/modules/scripts/pages/develop-scripts.adoc
@@ -1,6 +1,6 @@
 = Разработка скриптов карточки
 
-Помимо разработки новых типов карточек, а также модификации компонентов существующих, новая бизнес-логика может быть добавлена в карточку с помощью скрипта карточки. В скриптах используется стандартный API {dv} (базовый и объектная модель), а средой разработки служит xref:baseobjects:desdirs:layouts/designer.adoc["Конструктор разметок"] и xref:baseobjects:desdirs:scripts/designer.adoc["Конструктор скриптов"], описание работы с которыми приведено в документации для модуля _{bo}_.
+Помимо разработки новых типов карточек, а также модификации компонентов существующих, новая бизнес-логика может быть добавлена в карточку с помощью скрипта карточки. В скриптах используется стандартный API {dv} (базовый и объектная модель), а средой разработки служит xref:backofficedesdirs:layouts/designer.adoc["Конструктор разметок"] и xref:backofficedesdirs:scripts/designer.adoc["Конструктор скриптов"], описание работы с которыми приведено в документации для модуля _{bo}_.
 
 В данном разделе приведена информация о специальных возможностях API {dv}, которые могут быть использованы в скриптах карточки.
 
