Ещё битые ссылки

--- a/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITspService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-ITaskService/pages/ITspService_IN.adoc
@@ -25,4 +25,4 @@ public interface ITspService
 
 == Заметки
 
-Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные в xref:backofficeadmin:system-settings.adoc#signature-cypher[документации по администрированию] модуля _{bo}_.
+Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные в xref:backoffice:admin:system-settings.adoc#signature-cypher[документации по администрированию] модуля _{bo}_.
