GBL-2686 -- общие сценарии работы с документами

--- a/modules/BackOffice-ObjectModel-Document/pages/DocumentMainInfo.VersioningType_PR.adoc
+++ b/modules/BackOffice-ObjectModel-Document/pages/DocumentMainInfo.VersioningType_PR.adoc
@@ -1,6 +1,6 @@
 = DocumentMainInfo.VersioningType -- свойство
 
-Задаёт или возвращает тип версионинга файлов документа.
+Задаёт или возвращает тип версионирования файлов документа.
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
