--- a/modules/BackOffice-ObjectModel-Document/pages/DocumentMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Document/pages/DocumentMainInfo_CL.adoc
@@ -27,7 +27,7 @@ public class DocumentMainInfo : BaseCardSectionRow
 |`xref:DocumentMainInfo.SignatureList_PR.adoc[SignatureList]` |Задаёт или возвращает список подписей.
 |`Surveys` |Задаёт или возвращает список опросов.
 |`xref:DocumentMainInfo.Tasks_PR.adoc[Tasks]` |Задаёт или возвращает список заданий, прикрепленных к документу.
-|`xref:DocumentMainInfo.VersioningType_PR.adoc[VersioningType]` |Задаёт или возвращает тип версионинга файлов документа.
+|`xref:DocumentMainInfo.VersioningType_PR.adoc[VersioningType]` |Задаёт или возвращает тип версионирования файлов документа.
 |===
 
 == Поля
