--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/DocumentSetting_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/DocumentSetting_CL.adoc
@@ -30,5 +30,5 @@ public sealed class DocumentSetting : ContextualPropertyObject
 |`Properties` |Возвращает свойства документа.
 |`RootCategory` |Задаёт или возвращает идентификатор корневой директории.
 |`UniqueAttributes` |Возвращает настройки уникальных атрибутов карточки.
-|`VersioningType` |Задаёт или возвращает тип версионинга для файлов документа.
+|`VersioningType` |Задаёт или возвращает тип версионирования для файлов документа.
 |===
