--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CreateDocument_3_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CreateDocument_3_MT.adoc
@@ -1,6 +1,6 @@
 = IDocumentService.CreateDocument -- метод (String, KindsCardKind, DocumentVersioningType)
 
-Создаёт документ с заданным видом карточки и добавляет основной файл с указанным типов версионинга.
+Создаёт документ с заданным видом карточки и добавляет основной файл с указанным типов версионирования.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
@@ -43,7 +43,7 @@ versioningType:::
 
 == Примеры
 
-Далее приведён пример создания карточки документ с основным файлом, у которого автоматический тип версионинга указан
+Далее приведён пример создания карточки документ с основным файлом, у которого автоматический тип версионирования указан
 
 [source,csharp]
 ----
