--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService_IN.adoc
@@ -60,7 +60,7 @@ public interface IDocumentService
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateDocument_MT.adoc[CreateDocument]` |Создаёт экземпляр нового документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateDocument_2_MT.adoc[CreateDocument(String)]` |Создаёт экземпляр нового документа с основным файлом.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateDocument_1_MT.adoc[CreateDocument(String, KindsCardKind)]` |Создаёт экземпляр нового документа с указанным видом, с основным файлом.
-|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateDocument_3_MT.adoc[CreateDocument(String, KindsCardKind, DocumentVersioningType)]` |Создаёт документ с заданным видом карточки и добавляет основной файл с указанным типов версионинга.
+|`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateDocument_3_MT.adoc[CreateDocument(String, KindsCardKind, DocumentVersioningType)]` |Создаёт документ с заданным видом карточки и добавляет основной файл с указанным типов версионирования.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateListCards_MT.adoc[CreateListCards(Document)]` |Инициализирует списки, используемые документом.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.CreateSignatureList_MT.adoc[CreateSignatureList]` |Инициализирует новый экземпляр списка подписей документа.
 |`xref:BackOffice-ObjectModel-Services-IDocumentService:IDocumentService.DecodeSignedDocument_MT.adoc[DecodeSignedDocument(String, Document, `SignedCms`)]` |Расшифровывает сообщение CMS/PKCS 7, которое содержится в файле, расположенном по указанному пути.
